--- a/associate.html
+++ b/associate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freelance Work</title>
+    <title>Associate Operation analyst</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -103,42 +103,53 @@
 <body>
     <div class="container">
 	<a href="index.html">Back</a>
-        <h1>Freelance Cellphone Technician</h1>
+        <h1>Experience</h1>
 
-        <div class="description">
-            <p><strong>Position:</strong> Freelance Cellphone Technician</p>
-			<p><strong>Duration:</strong> October 2021 - Present</p>
-            <p><strong>Description:</strong>  specializing in diagnosing, repairing, and maintaining mobile devices. I have expertise in troubleshooting hardware and software issues, replacing damaged components such as screens and batteries, flashing firmware, 
-			and resolving connectivity problems. I ensure that every device is restored to optimal performance while providing excellent customer service.</p>
+        <div class="job">
+            <h2>Manulife Philippines</h2>
+            <p>Commonwealth Diliman,Quezon City Philippines</p>
+			<p><strong>Position:</strong> Associate Operation Analyst</p>
+            <p><strong>Duration:</strong> June 2024 - August 2024</p>
         </div>
+
+
+
+        <h2>Responsibilities:</h2>
+        <ul>
+            <li>24/7 Production Support for Global Asia Operations.</li>
+            <li>Batch job Scheduling and job execution (CA automation).</li>
+            <li>Incident management and Service Request (ServiceNow).</li>
+			<li>SLA compliance for incident resolution.</li>
+			<li>Executing batch  script & Command-Line Tasks.</li>
+			<li>Cross-functional teams for issue resolution.</li>
+			<li>Secure Remote server access (CyberArk).</li>
+			<li>Disaster recovery and backup operation.</li>
+            </ul>
 
         <div class="skills">
             <h2>Skills</h2>
             <ul>
                 <li>
-                    <img src="https://cdn-icons-png.flaticon.com/512/1828/1828926.png" alt="Update Icon" style="width: 24px; height: 24px;"> 
-                    <span>Firmware Flashing</span>
+                    <img src="pic/ca.jpg" alt="Control-M Icon" style="width: 24px; height: 24px;">
+                    <span>CA Automation</span>
                 </li>
                 <li>
-                    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135771.png" alt="Software Troubleshooting Icon" style="width: 24px; height: 24px;"> 
-                    <span>Technical Skill</span>
+                    <img src="pic/service.png" alt="Control-M Icon" style="width: 24px; height: 24px;">
+                    <span>ServiceNow</span>
                 </li>
-                <li>
-                    <img src="https://cdn-icons-png.flaticon.com/512/3434/3434877.png" alt="Device Assembly Icon" style="width: 24px; height: 24px;"> 
-                    <span>Device Disassembly</span>
+				<li>
+                    <img src="pic/cyber.png" alt="Control-M Icon" style="width: 24px; height: 24px;">
+                    <span>CyberArk</span>
                 </li>
-                <li>
-                   <img src="https://cdn-icons-png.flaticon.com/512/3405/3405775.png" alt="Hardware Repair Icon" style="width: 24px; height: 24px;"> 
-                    <span>Hardware Repair</span>
+				<li>
+                    <img src="pic/remote.jpg" alt="Control-M Icon" style="width: 24px; height: 24px;">
+                    <span>Remote Server Access</span>
                 </li>
-                <li>
-                    <img src="https://cdn-icons-png.flaticon.com/512/1096/1096125.png" alt="Customer Service Icon" style="width: 24px; height: 24px;"> 
-                    <span>Customer Service</span>
+				<li>
+                    <img src="pic/tech.png" alt="Control-M Icon" style="width: 24px; height: 24px;">
+                    <span>Production Support</span>
                 </li>
-                <li>
-                   <img src="https://cdn-icons-png.flaticon.com/512/3135/3135769.png" alt="Diagnostic Skills Icon" style="width: 24px; height: 24px;"> 
-                    <span>Diagnostic Skills</span>
-                </li>
+				
             </ul>
         </div>
 
