--- a/lab-technician-details.html
+++ b/lab-technician-details.html
@@ -107,13 +107,14 @@
 				measures such as antivirus software, firewalls, and data encryption.</li>
             <li>Perform audits and tests on computer systems, networks and hardware to
 				ensure it is functioning properly.</li>
+				 <li>Laboratory inventory Management.</li>
             </ul>
 
         <div class="skills">
             <h2>Skills</h2>
             <ul>
                 <li>
-                    <img src="pic/Hardware.jpg" alt="Control-M Icon" style="width: 24px; height: 24px;">
+                    <img src="pic/hardware.png" alt="Control-M Icon" style="width: 24px; height: 24px;">
                     <span>Hardware Maintenance</span>
                 </li>
                 <li>
@@ -133,7 +134,7 @@
                     <span>Technical Support</span>
                 </li>
 				<li>
-                    <img src="pic/Inventory.png" alt="Control-M Icon" style="width: 24px; height: 24px;">
+                    <img src="pic/inventory.png" alt="Control-M Icon" style="width: 24px; height: 24px;">
                     <span>Inventory Management</span>
                 </li>
 				<li>
